# CPTS440-Chess-Game-Playing-Agent

./: .gitignore  README.md  demo.ipynb  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
artifacts/: test_replay.html
artifacts/experiments_smoke/: experiment_report.html  experiment_summary.csv  experiment_summary.json
src/: __init__.py  board.py  engine.py  eval.py  experiments.py  search.py  ui.py  viz.py
src/cpts440_chess_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_board.py  test_engine.py  test_eval.py  test_eval_comparison.py  test_experiments.py  test_fen_fixtures.py  test_search_perf.py  test_smoke.py
tests/fixtures/: fen_positions.txt
